[gd_scene load_steps=4 format=3 uid="uid://tcigq8ej846p"]

[ext_resource type="Script" path="res://Scripts/building_menu.gd" id="1_8eguw"]
[ext_resource type="Texture2D" uid="uid://deij0gnfkvgsn" path="res://assets/PIPE.png" id="1_hwkye"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1s4ys"]
size = Vector2(1165, 153)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8eguw")

[node name="Area2D" type="Area2D" parent="."]
z_index = 1
y_sort_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(578.5, 579.5)
shape = SubResource("RectangleShape2D_1s4ys")

[node name="Panel" type="Panel" parent="."]
offset_left = -3.0
offset_top = 504.0
offset_right = 1155.0
offset_bottom = 653.0

[node name="Button" type="Button" parent="."]
offset_left = 9.0
offset_top = 512.0
offset_right = 135.0
offset_bottom = 560.0
text = "build canon"
icon = ExtResource("1_hwkye")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
